service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  type: ExternalName
  externalName: example.com
